tests/integration/features/sdoc/document_grammar/validation/04b_missing_required_grammar_field/test.itest
RUN: %expect_exit 1 %strictdoc export %S/input.sdoc --formats=sdoc --output-dir %T/ | filecheck %s

CHECK: error: could not parse file: {{.*}}/input.sdoc.
CHECK: Semantic error: Node is missing a field that is required by grammar: UID.
CHECK: Location: {{.*}}/input.sdoc:25:1
CHECK: Hint: Node fields: [STATEMENT], grammar fields: [UID, STATEMENT].
